--- a/testerr.ipynb
+++ b/testerr.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\anaconda3\\envs\\seg\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
@@ -16,13 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_cropped_images(3456,3456,384,384,\"c:/Users/PC/Desktop/Short_Data/Denoised/all_4096/test_crop384_s384\",\"c:/Users/PC/Desktop/Short_Data/Denoised/all_4096/test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "DEVICE = \"cuda\"\n",
-    "model = smp.Unet(\n",
-    "        encoder_name=\"vgg19\",\n",
+    "model = smp.UnetPlusPlus(\n",
+    "        encoder_name=\"vgg16\",\n",
     "        encoder_weights=\"imagenet\",\n",
     "        activation=\"sigmoid\",\n",
     "    \n",
@@ -167,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_img = \"c:/Users/PC/Desktop/Short_Data/Original/test/\"\n",
+    "dir_img = \"c:/Users/PC/Desktop/Short_Data/Preprocessed/test/\"\n",
     "dir_mask = \"c:/Users/PC/Desktop/Short_Data/labels/test/\"\n",
     "imgs = natsorted(os.listdir(dir_img))\n",
     "masks = [file for file in natsorted(os.listdir(dir_mask)) if file.lower().endswith(\".png\")]"
@@ -179,41 +197,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4780986450133837\n",
-      "0.5669003271692177\n",
-      "0.4499798487027236\n",
-      "0.41214245752051926\n",
-      "0.5609802748907521\n",
-      "0.538955760842986\n",
-      "0.30255204666302316\n",
-      "0.4967854324789797\n",
-      "0.4705867197364473\n",
-      "0.45867799874480464\n",
-      "0.5615781692156663\n",
-      "0.5513013692494089\n",
-      "0.5733291910411961\n",
-      "0.3052249792403247\n",
-      "0.40349300923480064\n",
-      "0.32501249125487414\n",
-      "0.4251697320647255\n",
-      "0.5142413115432517\n",
-      "0.49734814826068324\n",
-      "0.48025979597461926\n",
-      "0.4891378862015977\n",
-      "0.48569451587462287\n",
-      "0.4096533529245004\n",
-      "0.4672627655014037\n",
-      "0.43505095728812665\n",
-      "0.4420398463837843\n",
-      "0.40385075337782655\n",
-      "Average AUC-PR: 0.46315954764423145\n"
+      "0.5291166639867524\n",
+      "0.38899292867174085\n",
+      "0.2958920382047827\n",
+      "0.41930885970863685\n",
+      "0.6141214708323177\n",
+      "0.6232815499266366\n",
+      "0.38850961097278164\n",
+      "0.3944263322717716\n",
+      "0.14773184162426573\n",
+      "0.6331494139055125\n",
+      "0.6225926042101629\n",
+      "0.6412030401554438\n",
+      "0.6325167470957024\n",
+      "0.23362775901105512\n",
+      "0.4169610903097605\n",
+      "0.4091174048183195\n",
+      "0.48822725161753816\n",
+      "0.5759702563158449\n",
+      "0.5869472314721214\n",
+      "0.47037869289263645\n",
+      "0.5992152343771263\n",
+      "0.6138815743582455\n",
+      "0.5209911376915979\n",
+      "0.5831215101553581\n",
+      "0.5601441851763616\n",
+      "0.636441802578809\n",
+      "0.45720503605136065\n",
+      "Average AUC-PR: 0.49937308401454233\n"
      ]
     }
    ],
