--- a/testerr.ipynb
+++ b/testerr.ipynb
@@ -25,6 +25,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(20):\n",
+    "    print(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
