latest aupr_cal added

--- a/testerr.ipynb
+++ b/testerr.ipynb
@@ -2,60 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\PC\\anaconda3\\envs\\seg\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import segmentation_models_pytorch as smp\n",
-    "from utils import *"
+    "from utils import *\n",
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask1 = cv2.imread(\"IDRiD_81_he.png\")\n",
-    "mask2 = cv2.imread(\"IDRiD_81.png\")"
+    "test = np.load(\"C:/Users/PC/Desktop/kamyoun/out/2023_December_22-03_28_33/pred_probs_caglar_se/IDRiD_55.png_probs.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 3, 3, ..., 4, 4, 4], dtype=uint8)"
+       "3072.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mask2[mask2>1]"
+    "math.sqrt(9437184)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,11 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_img = \"c:/Users/PC/Desktop/Short_Data/Original/test/\"\n",
+    "dir_img = \"c:/Users/PC/Desktop/Short_Data/Denoised/all_4096/test/\"\n",
     "dir_mask = \"c:/Users/PC/Desktop/Short_Data/labels/test/\"\n",
     "imgs = natsorted(os.listdir(dir_img))\n",
     "masks = [file for file in natsorted(os.listdir(dir_mask)) if file.lower().endswith(\".png\")]"
@@ -205,41 +205,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def calculate_save_latest_pred_and_prob(dir_img,dir_mask,out_pred,out_prob,model,device,stride):\n",
+    "    DEVICE = device\n",
+    "\n",
+    "    model.load_state_dict(torch.load(\"best_model.pth\",map_location=DEVICE))\n",
+    "    model.to(DEVICE)\n",
+    "    for img, mask in zip(imgs, masks):\n",
+    "        img = cv2.imread(f\"{dir_img}/{img}\")\n",
+    "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "        \n",
+    "        gt = cv2.imread(f\"{dir_mask}/{mask}\", cv2.IMREAD_GRAYSCALE)\n",
+    "        gt = np.where(gt == 3, 1, 0)\n",
+    "        \n",
+    "        prob = patched_predict(img, model, stride,stride/2)\n",
+    "        pred = Image.fromarray((pred * 255).astype('uint8'))\n",
+    "        np.save(f\"{out_prob}/{mask}.png\",prob)\n",
+    "        pred.save(f\"{out_pred}/{mask}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.592064091156224\n",
-      "0.4749653297223503\n",
-      "0.29197055778541386\n",
-      "0.49871712618874686\n",
-      "0.6582800429241884\n",
-      "0.6769881407172597\n",
-      "0.3095922567476036\n",
-      "0.3473266421562535\n",
-      "0.3526821516494357\n",
-      "0.5455475949492652\n",
-      "0.6586463579286257\n",
-      "0.6302978775789323\n",
-      "0.6415472090818348\n",
-      "0.2354720055149916\n",
-      "0.464856335130579\n",
-      "0.4048995124606465\n",
-      "0.46666403341531354\n",
-      "0.5586649852983556\n",
-      "0.5933156915283513\n",
-      "0.5575613053184795\n",
-      "0.568709907173037\n",
-      "0.6370289810064451\n",
-      "0.4824177858362816\n",
-      "0.46578064184290524\n",
-      "0.4468538513415204\n",
-      "0.4977374217315995\n",
-      "0.4511308787519632\n",
-      "Average AUC-PR: 0.5003599524050593\n"
+      "0.9357668510233617\n",
+      "0.7483981565959194\n",
+      "0.5641012497143779\n",
+      "0.7998333206713981\n",
+      "0.892496054159251\n",
+      "0.8261104761134622\n",
+      "0.8428131954925293\n",
+      "0.8654130077873855\n",
+      "0.8723005172792974\n",
+      "0.8512300715015759\n",
+      "0.8379081849314425\n",
+      "0.9065193130714785\n",
+      "0.6739473362811691\n",
+      "0.7840079797727606\n",
+      "0.27215446893576867\n",
+      "0.36632032874080417\n",
+      "0.9233277582406586\n",
+      "0.9377034303364598\n",
+      "0.7811187110833308\n",
+      "0.8244707635083939\n",
+      "0.7849710069670073\n",
+      "0.844399104833041\n",
+      "0.856688862731837\n",
+      "0.8714170596626862\n",
+      "0.9068361732314222\n",
+      "0.6492364506266506\n",
+      "0.8803230164184108\n",
+      "Average AUC-PR: 0.7888819573967363\n"
      ]
     }
    ],
@@ -250,9 +275,9 @@
     "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "    \n",
     "    gt = cv2.imread(f\"{dir_mask}/{mask}\", cv2.IMREAD_GRAYSCALE)\n",
-    "    gt = np.where(gt == 3, 1, 0)\n",
+    "    gt = np.where(gt == 1, 1, 0)\n",
     "    \n",
-    "    a = patched_predict(img, model, 384, 192)\n",
+    "    a = patched_predict(img, model, 1152, 576)\n",
     "    \n",
     "    auc_pr = calculate_auc_pr(gt, a)\n",
     "    print(auc_pr)\n",
@@ -260,6 +285,15 @@
     "\n",
     "average_auc_pr = total_auc_pr / len(imgs)\n",
     "print(f\"Average AUC-PR: {average_auc_pr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = np.load(\"IDRiD_55.png.png.npy\")"
    ]
   },
   {
